# viking-script.rs

./: .gitignore  Cargo.toml  package.json
projects/vks-compiler/: Cargo.toml
projects/vks-compiler/src/: lib.rs
projects/vks-compiler/src/configs/: mod.rs
projects/vks-compiler/src/errors/: convert.rs  display.rs  mod.rs
projects/vks-compiler/src/plugins/: mod.rs
projects/vks-compiler/src/writers/: mod.rs
projects/vks-compiler/tests/: main.rs
projects/vks-compiler/tests/basic/: caller.ts  index.ts  main.ts  needed.ts  package.json  test.map.json  viking.toml
projects/vks-compiler/tests/basic/debug/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.map.json
projects/vks-compiler/tests/basic/release/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.map.json
projects/vks-compiler/tests/basic/src/: header2.ts  index.ts
projects/vks-runtime/: jsr.json
projects/vks-template/: readme.md
