[package]
name = "vks-compiler"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
oxc = { version = "0.62.0", features = ["full"] }
oxc_isolated_declarations = { version = "0.62.0", features = [] }
oxc_transformer = { version = "0.62.0", features = [] }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
