[package]
name = "vks-compiler"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
oxc = { version = "0.61.2", features = ["full", "serialize"] }
#oxc_isolated_declarations = { version = "0.62.0", features = [] }
#oxc_transformer = { version = "0.62.0", features = [] }
#oxc_sourcemap = { version = "3.0.0", features = [] }
arcstr = "1.2.0"
tokio = { version = "1.44.1", features = ["full"] }

[dependencies.rolldown]
git = "https://github.com/rolldown/rolldown"
features = ["serde"]

[dependencies.rolldown_common]
git = "https://github.com/rolldown/rolldown"

[dependencies.rolldown_plugin_isolated_declaration]
git = "https://github.com/rolldown/rolldown"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
